--- a/fetalsyngen/examples/generator.ipynb
+++ b/fetalsyngen/examples/generator.ipynb
@@ -162,7 +162,7 @@
     "defaults:\n",
     "  - transforms/inference\n",
     "\n",
-    "_target_: fetalsyngen.data.datasets.FetalSimpleDataset\n",
+    "_target_: fetalsyngen.data.datasets.FetalTestDataset\n",
     "bids_path: ./data\n",
     "sub_list: null\n",
     "```\n",
@@ -187,7 +187,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Composed config: {'transforms': {'_target_': 'monai.transforms.Compose', 'transforms': [{'_target_': 'monai.transforms.SignalFillEmptyd', 'keys': ['image', 'label'], 'replacement': 0, 'allow_missing_keys': True}, {'_target_': 'monai.transforms.CropForegroundd', 'keys': ['image', 'label'], 'source_key': 'image', 'allow_smaller': True, 'margin': 0, 'allow_missing_keys': True}, {'_target_': 'monai.transforms.Spacingd', 'keys': ['image', 'label'], 'pixdim': [0.5, 0.5, 0.5], 'mode': ['bilinear', 'nearest'], 'allow_missing_keys': True}, {'_target_': 'monai.transforms.SpatialPadd', 'keys': ['image', 'label'], 'spatial_size': [256, 256, 256], 'mode': 'constant', 'allow_missing_keys': True}, {'_target_': 'monai.transforms.CenterSpatialCropd', 'keys': ['image', 'label'], 'roi_size': [256, 256, 256], 'allow_missing_keys': True}]}, '_target_': 'fetalsyngen.data.datasets.FetalSimpleDataset', 'bids_path': './data', 'sub_list': None}\n"
+      "Composed config: {'transforms': {'_target_': 'monai.transforms.Compose', 'transforms': [{'_target_': 'monai.transforms.SignalFillEmptyd', 'keys': ['image', 'label'], 'replacement': 0, 'allow_missing_keys': True}, {'_target_': 'monai.transforms.CropForegroundd', 'keys': ['image', 'label'], 'source_key': 'image', 'allow_smaller': True, 'margin': 0, 'allow_missing_keys': True}, {'_target_': 'monai.transforms.Spacingd', 'keys': ['image', 'label'], 'pixdim': [0.5, 0.5, 0.5], 'mode': ['bilinear', 'nearest'], 'allow_missing_keys': True}, {'_target_': 'monai.transforms.SpatialPadd', 'keys': ['image', 'label'], 'spatial_size': [256, 256, 256], 'mode': 'constant', 'allow_missing_keys': True}, {'_target_': 'monai.transforms.CenterSpatialCropd', 'keys': ['image', 'label'], 'roi_size': [256, 256, 256], 'allow_missing_keys': True}]}, '_target_': 'fetalsyngen.data.datasets.FetalTestDataset', 'bids_path': './data', 'sub_list': None}\n"
      ]
     },
     {
