--- a/examples/generator.ipynb
+++ b/examples/generator.ipynb
@@ -535,7 +535,8 @@
     "\n",
     "dataset = FetalSynthDataset(bids_path='./../data', generator=generator,\n",
     "                            seed_path='./../data/derivatives/seeds', \n",
-    "                            sub_list=None)"
+    "                            sub_list=None)\n",
+    "\n"
    ]
   },
   {
@@ -718,10 +719,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'idx': 0,\n",
+       " 'img_paths': PosixPath('../data/sub-sta38/anat/sub-sta38_rec-irtk_T2w.nii.gz'),\n",
+       " 'segm_paths': PosixPath('../data/sub-sta38/anat/sub-sta38_rec-irtk_T2w.nii.gz'),\n",
+       " 'seeds': defaultdict(dict,\n",
+       "             {1: {1: PosixPath('../data/derivatives/seeds/subclasses_1/sub-sta38/anat/sub-sta38_rec-irtk_T2w_dseg_mlabel_1.nii.gz'),\n",
+       "               2: PosixPath('../data/derivatives/seeds/subclasses_1/sub-sta38/anat/sub-sta38_rec-irtk_T2w_dseg_mlabel_2.nii.gz'),\n",
+       "               3: PosixPath('../data/derivatives/seeds/subclasses_1/sub-sta38/anat/sub-sta38_rec-irtk_T2w_dseg_mlabel_3.nii.gz'),\n",
+       "               4: PosixPath('../data/derivatives/seeds/subclasses_1/sub-sta38/anat/sub-sta38_rec-irtk_T2w_dseg_mlabel_4.nii.gz')},\n",
+       "              2: {1: PosixPath('../data/derivatives/seeds/subclasses_2/sub-sta38/anat/sub-sta38_rec-irtk_T2w_dseg_mlabel_1.nii.gz'),\n",
+       "               2: PosixPath('../data/derivatives/seeds/subclasses_2/sub-sta38/anat/sub-sta38_rec-irtk_T2w_dseg_mlabel_2.nii.gz'),\n",
+       "               3: PosixPath('../data/derivatives/seeds/subclasses_2/sub-sta38/anat/sub-sta38_rec-irtk_T2w_dseg_mlabel_3.nii.gz'),\n",
+       "               4: PosixPath('../data/derivatives/seeds/subclasses_2/sub-sta38/anat/sub-sta38_rec-irtk_T2w_dseg_mlabel_4.nii.gz')},\n",
+       "              3: {1: PosixPath('../data/derivatives/seeds/subclasses_3/sub-sta38/anat/sub-sta38_rec-irtk_T2w_dseg_mlabel_1.nii.gz'),\n",
+       "               2: PosixPath('../data/derivatives/seeds/subclasses_3/sub-sta38/anat/sub-sta38_rec-irtk_T2w_dseg_mlabel_2.nii.gz'),\n",
+       "               3: PosixPath('../data/derivatives/seeds/subclasses_3/sub-sta38/anat/sub-sta38_rec-irtk_T2w_dseg_mlabel_3.nii.gz'),\n",
+       "               4: PosixPath('../data/derivatives/seeds/subclasses_3/sub-sta38/anat/sub-sta38_rec-irtk_T2w_dseg_mlabel_4.nii.gz')}}),\n",
+       " 'selected_seeds': {'mlabel2subclusters': {1: 2, 2: 1, 3: 3, 4: 1}},\n",
+       " 'seed_intensities': {'mus': tensor([109.6722, 220.9658, 100.9801,  38.6364, 125.5148, 108.1950, 216.1060,\n",
+       "          190.5462,  55.3930,  59.2667,  72.0628,  68.8775,  76.5113,  84.6639,\n",
+       "           90.0124,  94.1701,  67.0610,  25.9465,  31.5438,  21.0375, 192.4223,\n",
+       "          173.7434, 139.9284, 121.3904, 145.4289, 158.1318, 157.4630, 150.0894,\n",
+       "          183.9047, 181.7129, 114.8939,   9.5253,  29.0257,  97.9543, 122.0798,\n",
+       "           72.2969,  26.3086,  81.8050,  67.7463,  72.3737, 129.8539, 113.3900,\n",
+       "          141.8177, 225.0000,  35.3458, 173.7635,  29.5101, 135.9482, 188.2391,\n",
+       "          225.0000], device='cuda:0'),\n",
+       "  'sigmas': tensor([ 9.2432, 23.1060, 16.4965,  6.4289, 24.7862, 23.7996, 15.2424, 20.2845,\n",
+       "          12.6833,  6.9079,  6.1214, 22.1317,  9.7907,  5.5302, 14.3288, 11.1454,\n",
+       "          16.0453, 20.9057, 24.2358, 13.4785, 22.7258, 11.2053, 12.9420, 13.4270,\n",
+       "          14.8660, 22.4874,  5.6251,  9.8794,  8.8749, 19.0294,  9.7164,  6.2293,\n",
+       "          13.6376, 11.7447, 14.1414,  6.4362, 20.4575, 14.6729,  8.4719, 14.2926,\n",
+       "           6.9458, 11.5346, 14.6113,  6.6516, 22.1767,  8.3793, 20.1699,  6.3299,\n",
+       "           5.3340, 21.8027], device='cuda:0')},\n",
+       " 'deform_params': {'affine': {'rotations': array([ 0.0008224 ,  0.03067143, -0.0151502 ]),\n",
+       "   'shears': array([-0.01735838,  0.00744726,  0.00012507]),\n",
+       "   'scalings': array([1.09345725, 0.91695532, 0.98194215])},\n",
+       "  'non_rigid': {'nonlin_scale': array([0.05686841]),\n",
+       "   'nonlin_std': 1.048839010036788,\n",
+       "   'size_F_small': [15, 15, 15]},\n",
+       "  'flip': False},\n",
+       " 'gamma_params': {'gamma': 0.960299468352801},\n",
+       " 'bf_params': {'bf_scale': None, 'bf_std': None, 'bf_size': None},\n",
+       " 'resample_params': {'spacing': array([0.65685245, 0.65685245, 0.65685245])},\n",
+       " 'noise_params': {'noise_std': None},\n",
+       " 'generation_time': 0.5615839958190918}"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'idx': 0,\n",
+       " 'img_paths': PosixPath('../data/sub-sta38/anat/sub-sta38_rec-irtk_T2w.nii.gz'),\n",
+       " 'segm_paths': PosixPath('../data/sub-sta38/anat/sub-sta38_rec-irtk_T2w.nii.gz'),\n",
+       " 'seeds': defaultdict(dict,\n",
+       "             {1: {1: PosixPath('../data/derivatives/seeds/subclasses_1/sub-sta38/anat/sub-sta38_rec-irtk_T2w_dseg_mlabel_1.nii.gz'),\n",
+       "               2: PosixPath('../data/derivatives/seeds/subclasses_1/sub-sta38/anat/sub-sta38_rec-irtk_T2w_dseg_mlabel_2.nii.gz'),\n",
+       "               3: PosixPath('../data/derivatives/seeds/subclasses_1/sub-sta38/anat/sub-sta38_rec-irtk_T2w_dseg_mlabel_3.nii.gz'),\n",
+       "               4: PosixPath('../data/derivatives/seeds/subclasses_1/sub-sta38/anat/sub-sta38_rec-irtk_T2w_dseg_mlabel_4.nii.gz')},\n",
+       "              2: {1: PosixPath('../data/derivatives/seeds/subclasses_2/sub-sta38/anat/sub-sta38_rec-irtk_T2w_dseg_mlabel_1.nii.gz'),\n",
+       "               2: PosixPath('../data/derivatives/seeds/subclasses_2/sub-sta38/anat/sub-sta38_rec-irtk_T2w_dseg_mlabel_2.nii.gz'),\n",
+       "               3: PosixPath('../data/derivatives/seeds/subclasses_2/sub-sta38/anat/sub-sta38_rec-irtk_T2w_dseg_mlabel_3.nii.gz'),\n",
+       "               4: PosixPath('../data/derivatives/seeds/subclasses_2/sub-sta38/anat/sub-sta38_rec-irtk_T2w_dseg_mlabel_4.nii.gz')},\n",
+       "              3: {1: PosixPath('../data/derivatives/seeds/subclasses_3/sub-sta38/anat/sub-sta38_rec-irtk_T2w_dseg_mlabel_1.nii.gz'),\n",
+       "               2: PosixPath('../data/derivatives/seeds/subclasses_3/sub-sta38/anat/sub-sta38_rec-irtk_T2w_dseg_mlabel_2.nii.gz'),\n",
+       "               3: PosixPath('../data/derivatives/seeds/subclasses_3/sub-sta38/anat/sub-sta38_rec-irtk_T2w_dseg_mlabel_3.nii.gz'),\n",
+       "               4: PosixPath('../data/derivatives/seeds/subclasses_3/sub-sta38/anat/sub-sta38_rec-irtk_T2w_dseg_mlabel_4.nii.gz')}}),\n",
+       " 'selected_seeds': {'mlabel2subclusters': {1: 2, 2: 1, 3: 3, 4: 1}},\n",
+       " 'seed_intensities': {'mus': tensor([109.6722, 220.9658, 100.9801,  38.6364, 125.5148, 108.1950, 216.1060,\n",
+       "          190.5462,  55.3930,  59.2667,  72.0628,  68.8775,  76.5113,  84.6639,\n",
+       "           90.0124,  94.1701,  67.0610,  25.9465,  31.5438,  21.0375, 192.4223,\n",
+       "          173.7434, 139.9284, 121.3904, 145.4289, 158.1318, 157.4630, 150.0894,\n",
+       "          183.9047, 181.7129, 114.8939,   9.5253,  29.0257,  97.9543, 122.0798,\n",
+       "           72.2969,  26.3086,  81.8050,  67.7463,  72.3737, 129.8539, 113.3900,\n",
+       "          141.8177, 225.0000,  35.3458, 173.7635,  29.5101, 135.9482, 188.2391,\n",
+       "          225.0000], device='cuda:0'),\n",
+       "  'sigmas': tensor([ 9.2432, 23.1060, 16.4965,  6.4289, 24.7862, 23.7996, 15.2424, 20.2845,\n",
+       "          12.6833,  6.9079,  6.1214, 22.1317,  9.7907,  5.5302, 14.3288, 11.1454,\n",
+       "          16.0453, 20.9057, 24.2358, 13.4785, 22.7258, 11.2053, 12.9420, 13.4270,\n",
+       "          14.8660, 22.4874,  5.6251,  9.8794,  8.8749, 19.0294,  9.7164,  6.2293,\n",
+       "          13.6376, 11.7447, 14.1414,  6.4362, 20.4575, 14.6729,  8.4719, 14.2926,\n",
+       "           6.9458, 11.5346, 14.6113,  6.6516, 22.1767,  8.3793, 20.1699,  6.3299,\n",
+       "           5.3340, 21.8027], device='cuda:0')},\n",
+       " 'deform_params': {'affine': {'rotations': array([ 0.0008224 ,  0.03067143, -0.0151502 ]),\n",
+       "   'shears': array([-0.01735838,  0.00744726,  0.00012507]),\n",
+       "   'scalings': array([1.09345725, 0.91695532, 0.98194215])},\n",
+       "  'non_rigid': {'nonlin_scale': array([0.05686841]),\n",
+       "   'nonlin_std': 1.048839010036788,\n",
+       "   'size_F_small': [15, 15, 15]},\n",
+       "  'flip': False},\n",
+       " 'gamma_params': {'gamma': 0.960299468352801},\n",
+       " 'bf_params': {'bf_scale': array([0.00797334]),\n",
+       "  'bf_std': array([0.21896995]),\n",
+       "  'bf_size': [2, 2, 2]},\n",
+       " 'resample_params': {'spacing': array([0.65685245, 0.65685245, 0.65685245])},\n",
+       " 'noise_params': {'noise_std': None},\n",
+       " 'generation_time': 0.6192283630371094}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b"
+   ]
   },
   {
    "cell_type": "code",
